--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-async-once-cell = "0.5.3"
-async-std = "1.12.0"
-ceramic-http-client = { git = "https://github.com/3box/ceramic-http-client-rs.git", branch = "feat/healthcheck" }
+ceramic-http-client = { git = "https://github.com/3box/ceramic-http-client-rs.git", branch = "main" }
 dotenvy = "0.15.7"
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1"
