feat: hit ceramic healthcheck endpoint (#2)
* feat: hit ceramic healthcheck endpoint

* fix: add back compiler check for warnings but allow dead code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+ceramic-http-client = { git = "https://github.com/3box/ceramic-http-client-rs.git", branch = "main" }
 dotenvy = "0.15.7"
-rstest = "0.18.2"
+tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1"
 tracing-test = "0.2"
+url = { version = "2.2.2" }
