--- a/env/.env
+++ b/env/.env
@@ -1,1 +1,1 @@
-CERAMIC_URLS=https://ceramic-private-dev.3boxlabs.com,https://ceramic-dev.3boxlabs.com
+COMPOSEDB_URLS=https://ceramic-private-dev.3boxlabs.com,https://ceramic-dev.3boxlabs.com
