feat: add property based tests
This adds two tests to api.rs. Additionally various script to aid in
running tests are included.

--- a/k8s/networks/basic-go-rust.yaml
+++ b/k8s/networks/basic-go-rust.yaml
@@ -5,6 +5,7 @@ metadata:
   name: basic-go-rust
 spec:
   replicas: 2
+  privateKeySecret: "ceramic-tests-admin-did"
   ceramic:
     - ipfs:
         go: {}
