--- a/k8s/networks/basic-go.yaml
+++ b/k8s/networks/basic-go.yaml
@@ -5,6 +5,7 @@ metadata:
   name: basic-go
 spec:
   replicas: 2
+  privateKeySecret: "ceramic-tests-admin-did"
   ceramic:
     - ipfs:
         go: {}
