--- a/k8s/networks/basic-rust.yaml
+++ b/k8s/networks/basic-rust.yaml
@@ -5,6 +5,7 @@ metadata:
   name: basic-rust
 spec:
   replicas: 2
+  privateKeySecret: "ceramic-tests-admin-did"
   ceramic:
     - ipfs:
         rust: {}
