--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -1,7 +1,10 @@
 name: Run smoke tests
 
 on:
-  push:
+  push: # TODO: remove after testing
+  schedule:
+    # Run every midnight UTC
+    - cron: "0 0 * * *"
   workflow_dispatch: # manually triggered
 
 jobs:
