--- a/.github/workflows/prop.yml
+++ b/.github/workflows/prop.yml
@@ -11,6 +11,7 @@ on:
 
 jobs:
   generate-matrix:
+    name: Generate Matrix
     runs-on: ubuntu-latest
     outputs:
       networks: ${{ steps.generate-matrix.outputs.networks }}
@@ -27,6 +28,7 @@ jobs:
           echo ::set-output name=networks::${NETWORKS}
 
   run-tests:
+    name: Test
     runs-on: ubuntu-latest
     needs: generate-matrix
     strategy:
@@ -68,3 +70,17 @@ jobs:
           if [[ ${{ github.event_name }} == "pull_request" ]]; then
             ./delete-tests.sh ${{ matrix.networks }}
           fi
+
+  collect-results:
+    name: Results
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+    needs: [run-tests]
+    steps:
+      - run: exit 1
+        # see https://stackoverflow.com/a/67532120/4907315
+        if: >-
+          ${{
+               contains(needs.*.result, 'failure')
+            || contains(needs.*.result, 'cancelled')
+          }}
