--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   generate-matrix:
+    name: Generate Matrix
     runs-on: ubuntu-latest
     outputs:
       networks: ${{ steps.generate-matrix.outputs.networks }}
@@ -24,6 +25,7 @@ jobs:
           echo ::set-output name=networks::${NETWORKS}
 
   run-tests:
+    name: Test
     runs-on: ubuntu-latest
     needs: generate-matrix
     strategy:
@@ -50,3 +52,17 @@ jobs:
         name: Test ${{ matrix.networks }}
         working-directory: k8s/tests/scripts
         run: ./run-tests.sh ${{ matrix.networks }} smoke
+
+  collect-results:
+    name: Results
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+    needs: [run-tests]
+    steps:
+      - run: exit 1
+        # see https://stackoverflow.com/a/67532120/4907315
+        if: >-
+          ${{
+               contains(needs.*.result, 'failure')
+            || contains(needs.*.result, 'cancelled')
+          }}
