--- a/.github/workflows/prop.yml
+++ b/.github/workflows/prop.yml
@@ -9,12 +9,18 @@ on:
     - cron: "0 0 * * *"
   workflow_dispatch: # manually triggered
 
+env:
+  CARGO_TERM_COLOR: always
+  SCCACHE_GHA_ENABLED: "true"
+  RUSTC_WRAPPER: "sccache"
+
 jobs:
   generate-matrix:
     name: Generate Matrix
     runs-on: ubuntu-latest
     outputs:
       networks: ${{ steps.generate-matrix.outputs.networks }}
+      build_tag: ${{ steps.generate-matrix.outputs.build_tag }}
     steps:
       -
         name: Checkout
@@ -23,14 +29,83 @@ jobs:
         name: Generate network matrix
         id: generate-matrix
         run: |
-          NETWORKS=$(ls k8s/networks | jq -R -s -c '. | gsub(".yaml"; "") | split("\n")[:-1]')
+          NETWORKS=$(ls networks | jq -R -s -c '. | gsub(".yaml"; "") | split("\n")[:-1]')
+          echo "Networks:"
           echo ${NETWORKS}
-          echo ::set-output name=networks::${NETWORKS}
+          echo "networks=${NETWORKS}" >> $GITHUB_OUTPUT
+          # Choose unique name for this build
+          BUILD_TAG="$(echo ${{ github.sha }} | head -c 8)-${{ github.run_id }}"
+          echo "Build tag:"
+          echo ${BUILD_TAG}
+          echo "build_tag=${BUILD_TAG}" >> $GITHUB_OUTPUT
+          cat $GITHUB_OUTPUT
 
+  publish-property:
+    name: Build/Publish 'ceramic-tests-property' Image
+    runs-on: ubuntu-latest
+    needs:
+      - generate-matrix
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    - name: Login to Public ECR
+      uses: docker/login-action@v2
+      with:
+        registry: public.ecr.aws
+        username: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      env:
+        AWS_REGION: us-east-1
+    - name: Cache cargo
+      uses: actions/cache@v3
+      with:
+        path: cargo-cache
+        key: cargo-cache-${{ github.ref_name }}-${{ github.sha }}
+        restore-keys: |
+          cargo-cache-${{ github.ref_name }}
+          cargo-cache
+    - name: Inject cargo-cache into docker
+      run: |
+        mkdir -p cargo-cache
+        cd cargo-cache
+        ls -la .
+        ../ci-scripts/inject_docker_mount_cache.sh
+    - name: Build and Publish
+      run: make BUILD_TAG=${{ needs.generate-matrix.outputs.build_tag }} publish-tests-property
+    - name: Extact cargo-cache from docker
+      run: |
+        cd cargo-cache
+        ../ci-scripts/extract_docker_mount_cache.sh
+        ls -la .
+  build-driver:
+    name: Build 'ceramic-tests-driver' binary
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - uses: dtolnay/rust-toolchain@stable
+    - uses: Swatinem/rust-cache@v2
+      with:
+        # The prefix cache key, this can be changed to start a new cache manually.
+        # default: "v0-rust"
+        prefix-key: v0
+        # Cache only the cargo registry
+        cache-targets: false
+    - uses: mozilla-actions/sccache-action@v0.0.3
+    - name: Build Tester
+      run: make BUILD_PROFILE=release driver
+    - uses: actions/upload-artifact@master
+      with:
+        name: ceramic-tests-driver
+        path: ./target/release/ceramic-tests-driver
+        retention-days: 1
   run-tests:
     name: Test
     runs-on: ubuntu-latest
-    needs: generate-matrix
+    needs:
+      - generate-matrix
+      - publish-property
+      - build-driver
     strategy:
       fail-fast: false
       matrix:
@@ -50,26 +125,17 @@ jobs:
         with:
           cluster_name: ${{ secrets.GKE_CLUSTER }}
           location: ${{ secrets.GKE_ZONE }}
-      -
-        # Add a "_sha_runId" suffix to differentiate PR test runs
-        name: Setup test env
-        if: ${{ github.event_name == 'pull_request' }}
-        run: |
-          TEST_SUFFIX="-$(echo ${{ github.sha }} | head -c 8)-${{ github.run_id }}"
-          echo "TEST_SUFFIX=$TEST_SUFFIX" >> $GITHUB_ENV
+      - uses: actions/download-artifact@master
+        with:
+          name: ceramic-tests-driver
+          path: ./bin
       -
         name: Test ${{ matrix.networks }}
-        working-directory: k8s/tests/scripts
-        run: ./run-tests.sh ${{ matrix.networks }}
-      -
-        # Always cleanup resources at the end of PR test runs, whether the tests pass or fail.
-        name: Delete ${{ matrix.networks }}
-        if: always()
-        working-directory: k8s/tests/scripts
         run: |
-          if [[ ${{ github.event_name }} == "pull_request" ]]; then
-            ./delete-tests.sh ${{ matrix.networks }}
-          fi
+          export BUILD_TAG=${{ needs.generate-matrix.outputs.build_tag }}
+          export TEST_NETWORK=./networks/${{ matrix.networks }}.yaml
+          chmod +x ./bin/ceramic-tests-driver
+          make DRIVER_CMD=./bin/ceramic-tests-driver prop-test
 
   collect-results:
     name: Results
