--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,46 +1,14 @@
-[package]
-name = "ceramic-tests"
+[workspace]
+resolver = "2"
+members = ["property", "driver"]
+
+[workspace.dependencies]
+ceramic-tests-driver = { path = "./driver/" }
+ceramic-tests-property = { path = "./property/" }
+
+[workspace.package]
 version = "0.1.0"
 edition = "2021"
-
-[dependencies]
-anyhow = "1.0.75"
-ceramic-http-client = { git = "https://github.com/3box/ceramic-http-client-rs", branch = "main" }
-ceramic-api-server = { git = "https://github.com/3box/rust-ceramic", branch = "main", default-features = false, features = [
-    "client",
-    # TODO: We do not need the server but the generated feature flags are broken
-    # percent-encoding dep is not included with client feature alone.
-    "server",
-] }
-ceramic-kubo-rpc-server = { git = "https://github.com/3box/rust-ceramic", branch = "main", default-features = false, features = [
-    "client",
-    # TODO: We do not need the server but the generated feature flags are broken
-    # percent-encoding dep is not included with client feature alone.
-    "server",
-] }
-dotenvy = "0.15.7"
-hyper = { version = "0.14.27", features = ["client"] }
-rand = "0.8.5"
-schemars = "0.8.13"
-serde = { version = "1.0.188", features = ["serde_derive"] }
-swagger = "6.3.0"
-tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", default-features = false, features = [
-    "env-filter",
-    "fmt",
-] }
-test-log = { version = "0.2.12", default-features = false, features = [
-    "trace",
-] }
-url = { version = "2.2.2" }
-json-patch = "1.0.0"
-serde_json = "1.0.105"
-backoff = { version = "0.4.0", features = ["tokio"] }
-
-#[patch."https://github.com/3box/rust-ceramic"]
-#ceramic-api-server = { path = "../rust-ceramic/api-server" }
-#ceramic-kubo-rpc-server = { path = "../rust-ceramic/kubo-rpc-server" }
-
-#[patch."https://github.com/3box/ceramic-http-client-rs"]
-#ceramic-http-client = { path = "../ceramic-http-client-rs" }
+authors = ["Nathaniel Cook <nvcook42@gmail.com>"]
+license = "Apache-2.0/MIT"
+repository = "https://github.com/3box/ceramic-tests"
