feat: auto update deps as part of test run
This change introduces a script that updates the 3box deps of the test
suite so that we are always testing against latest released code.

Updating the deps initially made all the tests fail. The fix was to
remove the `moduleFileNames` config from the `jest.config.json` file, as
it was placing `.ts` files first causing deps that do not compile the
`.ts` files as ESM modules to fail vs just using the `.js` module files
in the deps.

--- a/.github/workflows/check_build_test.yml
+++ b/.github/workflows/check_build_test.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Check/Build/Test
 
 on:
   push:
@@ -18,6 +18,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - uses: pnpm/action-setup@v2
+      with:
+        package_json_file: suite/package.json
     - uses: dtolnay/rust-toolchain@stable
     - uses: Swatinem/rust-cache@v2
       with:
@@ -31,11 +34,16 @@ jobs:
       run: make check-fmt
     - name: Check clippy
       run: make check-clippy
+    - name: Check test suite
+      run: make check-suite
 
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - uses: pnpm/action-setup@v2
+      with:
+        package_json_file: suite/package.json
     - uses: dtolnay/rust-toolchain@stable
     - uses: Swatinem/rust-cache@v2
       with:
