--- a/suite/tsconfig.json
+++ b/suite/tsconfig.json
@@ -16,7 +16,7 @@
     "pretty": true,
     "resolveJsonModule": false,
     "skipLibCheck": true,
-    "sourceMap": false,
+    "sourceMap": true,
     "strict": true,
     "strictNullChecks": true,
     "target": "ES2020",
