--- a/suite/Dockerfile
+++ b/suite/Dockerfile
@@ -4,9 +4,9 @@ RUN npm install -g pnpm
 
 WORKDIR /app
 
-RUN apk add --no-cache curl
+RUN apk add --no-cache curl jq
 
-COPY package.json pnpm-*.yaml jest.config.json tsconfig.json ./
+COPY package.json pnpm-*.yaml jest.config.json tsconfig.json entrypoint.sh update.sh ./
 
 # install all npm dependencies including dev dependencies
 RUN pnpm install
@@ -16,10 +16,7 @@ COPY src/ ./src
 
 RUN pnpm run build
 
-# allow local imports without file ending - see: https://nodejs.org/api/esm.html
-# ENV NODE_OPTIONS="--experimental-specifier-resolution=node"
-
 ENV SUITE "all"
 ENV DELAY 0
 
-CMD ["pnpm", "run", "start"]
+ENTRYPOINT ["/app/entrypoint.sh", "run", "start"]
