--- a/suite/jest.config.json
+++ b/suite/jest.config.json
@@ -1,24 +1,19 @@
 {
     "clearMocks": true,
     "collectCoverage": false,
-    "extensionsToTreatAsEsm": [".ts"],
-    "globals": {
-        "ts-jest": {
-            "useESM": true
-        }
-    },
-    "moduleFileExtensions": ["ts", "js", "json"],
-    "modulePathIgnorePatterns": ["node_modules"],
-    "moduleNameMapper": {
-        "^(\\.{1,2}/.*)\\.js$": "$1"
-    },
-    "preset": "ts-jest/presets/default-esm",
-    "reporters": ["default", "<rootDir>/.build/utils/reporter.js"],
     "testEnvironment": "node",
-    "testRegex": "(/__tests__/.*(\\.|/)(test|spec))\\.ts$",
     "testTimeout": 600000,
-    "transform": {
-        "^.+\\.ts?$": "ts-jest"
+    "verbose": true,
+    "extensionsToTreatAsEsm": [".ts"],
+    "moduleNameMapper": {
+      "^(\\.{1,2}/.*)\\.js$": "$1"
     },
-    "verbose": true
+    "transform": {
+      "^.+\\.tsx?$": [
+        "ts-jest",
+        {
+          "useESM": true
+        }
+      ]
+    }
 }
