--- a/suite/package.json
+++ b/suite/package.json
@@ -10,33 +10,34 @@
   },
   "devDependencies": {
     "@skypack/package-check": "^0.2.2",
-    "@types/aws-lambda": "^8.10.85",
-    "@types/luxon": "^2.0.7",
-    "@types/node": "^16.11.10",
-    "ts-loader": "^9.2.6"
+    "@types/aws-lambda": "^8.10.123",
+    "@types/luxon": "^2.4.0",
+    "@types/node": "^16.18.57",
+    "ts-loader": "^9.4.4"
   },
   "dependencies": {
-    "@aws-sdk/client-api-gateway": "^3.43.0",
-    "@aws-sdk/client-dynamodb": "^3.43.0",
-    "@aws-sdk/client-lambda": "^3.42.0",
-    "@ceramicnetwork/common": "2.5.0",
-    "@ceramicnetwork/http-client": "2.3.3",
-    "@ceramicnetwork/stream-model": "0.4.2",
-    "@ceramicnetwork/stream-model-instance": "0.4.0",
-    "@ceramicnetwork/stream-tile": "2.4.2",
-    "@ceramicnetwork/streamid": "2.3.2",
-    "@composedb/devtools": "^0.2.2",
-    "@jest/globals": "^29.6.4",
-    "@jest/reporters": "^29.6.4",
+    "@aws-sdk/client-api-gateway": "^3.427.0",
+    "@aws-sdk/client-dynamodb": "^3.427.0",
+    "@aws-sdk/client-lambda": "^3.427.0",
+    "@ceramicnetwork/common": "2.36.0",
+    "@ceramicnetwork/http-client": "2.33.0",
+    "@ceramicnetwork/stream-model": "1.18.0",
+    "@ceramicnetwork/stream-model-instance": "1.18.0",
+    "@ceramicnetwork/stream-tile": "2.32.0",
+    "@ceramicnetwork/streamid": "2.17.0",
+    "@composedb/devtools": "^0.5.1",
+    "@jest/globals": "^29.7.0",
+    "@jest/reporters": "^29.7.0",
     "axios": "^0.24.0",
-    "dids": "^3.3.0",
+    "dids": "^4.0.4",
     "dotenv": "^16.3.1",
-    "jest": "^29.6.4",
-    "key-did-provider-ed25519": "^1.1.0",
-    "key-did-resolver": "^1.4.0",
+    "jest": "^29.7.0",
+    "key-did-provider-ed25519": "^3.0.2",
+    "key-did-resolver": "^3.0.0",
     "luxon": "3.2.1",
-    "node-jq": "^2.3.3",
+    "node-jq": "^2.3.5",
     "ts-jest": "^29.1.1",
-    "typescript": "^4.6.2"
-  }
+    "typescript": "^4.9.5"
+  },
+  "packageManager": "pnpm@^8.8.0"
 }
