--- a/.github/workflows/hermetic.yml
+++ b/.github/workflows/hermetic.yml
@@ -6,8 +6,7 @@ on:
   merge_group:
     branches: [ "main" ]
   schedule:
-    # Run every midnight UTC
-    - cron: "0 0 * * *"
+    - cron: "0 0/8 * * *" # Every 8 hours
   workflow_dispatch: # manually triggered
 
 env:
@@ -41,6 +40,7 @@ jobs:
           echo "build_tag=${BUILD_TAG}" >> $GITHUB_OUTPUT
           cat $GITHUB_OUTPUT
   publish-suite:
+    name: Publish Suite
     runs-on: ubuntu-latest
     needs: generate-matrix
     steps:
@@ -117,7 +117,7 @@ jobs:
           make HERMETIC_CMD=./bin/hermetic-driver hermetic-tests
 
   collect-results:
-    name: Results
+    name: Hermetic Test Results
     if: ${{ always() }}
     runs-on: ubuntu-latest
     needs: [run-tests]
