--- a/.github/workflows/prop.yml
+++ b/.github/workflows/prop.yml
@@ -76,6 +76,7 @@ jobs:
       run: |
         cd cargo-cache
         ../ci-scripts/extract_docker_mount_cache.sh
+
   build-driver:
     name: Build 'hermetic-driver' binary
     runs-on: ubuntu-latest
@@ -97,6 +98,7 @@ jobs:
         name: hermetic-driver
         path: ./target/release/hermetic-driver
         retention-days: 1
+
   run-tests:
     name: Test
     runs-on: ubuntu-latest
@@ -136,7 +138,7 @@ jobs:
           make HERMETIC_CMD=./bin/hermetic-driver prop-test
 
   collect-results:
-    name: Results
+    name: Property Test Results
     if: ${{ always() }}
     runs-on: ubuntu-latest
     needs: [run-tests]
