--- a/hermetic/Cargo.toml
+++ b/hermetic/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "ceramic-tests-driver"
+name = "hermetic-driver"
+description = "Test driver against hermetic infrastructure"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
 repository.workspace = true
 publish = false
-
 
 [dependencies]
 anyhow = "1.0.75"
