--- a/.github/workflows/hermetic_long_lived.yml
+++ b/.github/workflows/hermetic_long_lived.yml
@@ -1,10 +1,6 @@
-name: Run Hermetic tests
+name: Run long-lived Hermetic tests
 
 on:
-  pull_request:
-    branches: [ "main" ]
-  merge_group:
-    branches: [ "main" ]
   schedule:
     - cron: "0 0/8 * * *" # Every 8 hours
   workflow_dispatch: # manually triggered
@@ -117,10 +113,12 @@ jobs:
           export BUILD_TAG=${{ needs.generate-matrix.outputs.build_tag }}
           export TEST_NETWORK=./networks/${{ matrix.networks }}.yaml
           chmod +x ./bin/hermetic-driver
-          make HERMETIC_CMD=./bin/hermetic-driver hermetic-tests
+          # Clear the test suffix and set a 2 week TTL so that the latest suite image runs against the same long-lived
+          # networks for 2 weeks before the network is cleaned up and recreated.
+          make HERMETIC_SUFFIX= HERMETIC_TTL=1209600 HERMETIC_CMD=./bin/hermetic-driver hermetic-tests
 
   collect-results:
-    name: Hermetic Test Results
+    name: Long-Lived Hermetic Test Results
     if: ${{ always() }}
     runs-on: ubuntu-latest
     needs: [run-tests]
