--- a/suite/package.json
+++ b/suite/package.json
@@ -13,6 +13,8 @@
     "@types/aws-lambda": "^8.10.123",
     "@types/luxon": "^2.4.0",
     "@types/node": "^16.18.57",
+    "eslint-config-3box": "^1.0.0",
+    "prettier": "^3.0.3",
     "ts-loader": "^9.4.4"
   },
   "dependencies": {
@@ -39,5 +41,6 @@
     "ts-jest": "^29.1.1",
     "typescript": "^4.9.5"
   },
+  "prettier": "eslint-config-3box/prettier.config",
   "packageManager": "pnpm@^8.8.0"
 }
