--- a/suite/package.json
+++ b/suite/package.json
@@ -37,6 +37,7 @@
     "key-did-resolver": "^3.0.0",
     "luxon": "3.2.1",
     "node-jq": "^2.3.5",
+    "rxjs": "^7.8.1",
     "ts-jest": "^29.1.1",
     "typescript": "^4.9.5"
   },
