--- a/.github/workflows/schedule-durable.yml
+++ b/.github/workflows/schedule-durable.yml
@@ -1,15 +1,21 @@
-name: Run Durable tests
+name: Schedule Durable tests
 
 on:
   schedule:
-    # Run every midnight UTC
-    - cron: "0 0 * * *"
-  workflow_dispatch: # manually triggered
+    - cron: "0 0/8 * * *" # Every 8 hours
+  workflow_dispatch:
     inputs:
       environment:
-        description: 'Environment name (one of: dev, qa, tnet, prod)'
+        type: choice
+        description: "Environment name"
         required: true
-        default: 'qa'
+        default: "all"
+        options:
+          - dev
+          - qa
+          - tnet
+          - prod
+          - all
 
 env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
@@ -51,8 +57,8 @@ jobs:
       name: Build and Publish
       run: make BUILD_TAG=${{ steps.generate-build-tag.outputs.build_tag }} publish-suite
 
-  run-tests:
-    name: Test
+  schedule-job:
+    name: Schedule test job
     runs-on: ubuntu-latest
     needs:
       - publish-suite
@@ -64,22 +70,8 @@ jobs:
       -
         uses: actions/checkout@v3
       -
-        name: Test ${{ matrix.network }}
-        if: ${{ github.event.inputs.environment == null || github.event.inputs.environment == matrix.network }}
+        name: Schedule ${{ matrix.network }}
+        if: ${{ github.event.inputs.environment == 'all' || github.event.inputs.environment == matrix.network }}
         env:
           BUILD_TAG: ${{ needs.publish-suite.outputs.build_tag }}
-        run: make DURABLE_ENV=${{ matrix.network }} durable-tests
-
-  collect-results:
-    name: Durable Test Results
-    if: ${{ always() }}
-    runs-on: ubuntu-latest
-    needs: [run-tests]
-    steps:
-      - run: exit 1
-        # see https://stackoverflow.com/a/67532120/4907315
-        if: >-
-          ${{
-               contains(needs.*.result, 'failure')
-            || contains(needs.*.result, 'cancelled')
-          }}
+        run: make DURABLE_ENV=${{ matrix.network }} schedule-durable-tests
