--- a/.github/workflows/hermetic.yml
+++ b/.github/workflows/hermetic.yml
@@ -123,13 +123,14 @@ jobs:
           export TEST_NETWORK=./networks/${{ matrix.networks }}.yaml
           chmod +x ./bin/hermetic-driver
 
-          # For schedule events, "test_selector" will be null, so default to running all tests.
+          # For scheduled events, "test_selector" will be null, so default to running all tests.
           test_selector=${{ github.event.inputs.test_selector || '.' }}
-          # TODO: Uncomment once we have "fast" tests
+
           # For PR and merge group events, run only "fast" tests.
-          # if [[ ${{ github.event_name == 'pull_request' || github.event_name == 'merge_group' }} ]]; then
-          #     test_selector="fast"          
-          # fi
+          # Note it is not possible to override "test_selector" for these types of events.
+          if [[ ${{ github.event_name == 'pull_request' || github.event_name == 'merge_group' }} ]]; then
+              test_selector="fast"
+          fi
           make TEST_SELECTOR="$test_selector" HERMETIC_CMD=./bin/hermetic-driver hermetic-tests
 
   collect-results:
